--- a/contributions_by_Texas.Rmd
+++ b/contributions_by_Texas.Rmd
@@ -75,11 +75,11 @@ str(Data)
 summary(Data)
 
 # Get the number of candidates and columns.
-print(paste('<B>Number of candidates in Data:</B>'))
+print('Number of candidates in Data:')
 length(unique(Data$cand_nm))
 
 # Show some contributers' names.
-print(paste("<B>Show top 5 most common contributers' names</B>"))
+print("Show top 5 most common contributers' names")
 summary(Data$contbr_nm)[1:5]
 ```
 
@@ -94,28 +94,28 @@ summary(Data$contbr_nm)[1:5]
 # Show the states of 'ROBINSON, ROBBIE'.
 bonnie <- subset(Data, contbr_nm == 'RUDOLPH, BONNIE')
 
-print(paste('<B>How many unique city names are registered for him?</B>'))
+print('How many unique city names are registered for him?')
 length(unique(bonnie$contbr_city))
 
-print(paste('<B>What are the city names?</B>'))
+print('What are the city names?')
 unique(bonnie$contbr_city)
 
-print(paste('<B>How many unique zip codes are registered for him?</B>'))
+print('How many unique zip codes are registered for him?')
 length(unique(bonnie$contbr_zip))
 
-print(paste('<B>What are the zip codes?</B>'))
+print('What are the zip codes?')
 unique(bonnie$contbr_zip)
 
-print(paste('<B>How many of people are registered as his employer?</B>'))
+print('How many of people are registered as his employer?')
 length(unique(bonnie$contbr_employer))
 
-print(paste('<B>Who are his employers?</B>'))
+print('Who are his employers?')
 unique(bonnie$contbr_employer)
 
-print(paste('<B>How many occupations are registered for him?</B>'))
+print('How many occupations are registered for him?')
 length(unique(bonnie$contbr_occupation))
 
-print(paste('<B>What are his occupations?</B>'))
+print('What are his occupations?')
 unique(bonnie$contbr_occupation)
 ```
 
@@ -128,7 +128,7 @@ unique(bonnie$contbr_occupation)
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Change_types}
 
 # Set locale of R.
-print(paste("<B>Set locale as 'C'</B>"))
+print("Set locale as 'C'")
 Sys.setlocale("LC_TIME", "C")
 
 # Change the type to Date.
@@ -162,7 +162,7 @@ str(Cand)
 summary(Cand)
 
 # Show whether the unique values of the candidates' names are all equal to the cand's X values.
-print(paste("<B>If the unique values of the candidates' names in Data are all equal to the values in cand:</B>"))
+print("If the unique values of the candidates' names in Data are all equal to the values in cand:")
 
 all(unique(Data$cand_nm) == Cand$X)
 
@@ -197,7 +197,7 @@ Data <- merge(x = Data,
               by = 'cand_nm',
               all.x = TRUE)
 
-print(paste('<B>Show the names of the columns after merged</B>'))
+print('Show the names of the columns after merged')
 names(Data)
 ```
 
@@ -250,7 +250,7 @@ cities_counts <- as.data.frame(sort(table(Data$contbr_city, dnn = 'name'),
                                     decreasing = T),
                                responseName = 'count')
 
-print(paste("<B>Number of contributers' cities</B>"))
+print("Number of contributers' cities")
 length(cities_counts$name)
 
 ggplot(aes(x = name, y = count),
@@ -270,7 +270,7 @@ ggplot(aes(x = name, y = count),
 
 summary(Data$contb_receipt_amt)
 
-print(paste('<B>Top 6 most frequent contribution amounts:</B>'))
+print('Top 6 most frequent contribution amounts:')
 head(sort(table(Data$contb_receipt_amt), decreasing = T))
 
 # I designated binwidth as $100, because the range of amounts is about $30,000.
@@ -305,13 +305,13 @@ minus_amounts <- subset(Data, contb_receipt_amt < 0)
 
 summary(minus_amounts$contb_receipt_amt)
 
-print(paste('<B>Top 6 negative amounts:</B>'))
+print('Top 6 negative amounts:')
 head(sort(minus_amounts$contb_receipt_amt))
 
-print(paste('<B>Datas whose contribution amounts are less than -$10,000:</B>'))
+print('Datas whose contribution amounts are less than -$10,000:')
 subset(minus_amounts, contb_receipt_amt < -10000)
 
-print(paste('<B>Datas about DURHAM, JOE and CLARK, ELLOINE M.</B>'))
+print('Datas about DURHAM, JOE and CLARK, ELLOINE M.')
 subset(Data, contbr_nm %in% c('DURHAM, JOE', 'CLARK, ELLOINE M.'))
 
 # Get the descriptions about them to know the causes.
@@ -321,7 +321,7 @@ minus_amounts.description <- as.data.frame(sort(
   responseName = 'count'
   )
 
-print(paste('<B>Top 6 most common descriptions for negative values:</B>'))
+print('Top 6 most common descriptions for negative values:')
 head(minus_amounts.description)
 
 ggplot(aes(x = description, y = count),
@@ -339,11 +339,11 @@ more_than_5400_amounts.description <-  as.data.frame(sort(
   responseName = 'count'
   )
 
-print(paste('<B>Show the counts of contribution amounts whose values are above $5,400.</B>'))
+print('Show the counts of contribution amounts whose values are above $5,400.')
 sort(table(more_than_5400_amounts$contb_receipt_amt),
      decreasing = T)
 
-print(paste('<B>Top 6 descriptions for amounts whose values are above $5,400:</B>'))
+print('Top 6 descriptions for amounts whose values are above $5,400:')
 head(more_than_5400_amounts.description)
 ```
 
@@ -367,7 +367,7 @@ dates_counts <- as.data.frame(table(Data$contb_receipt_dt, dnn = 'date'),
 # Make the type of date variable in date_counts as Date. I needed to do it because as I made new data.frame, the type of the variable changed to factor.
 dates_counts$date <- as.Date(dates_counts$date, format = '%Y-%m-%d')
 
-print(paste('<B>Top 6 most frequent contribution dates:</B>'))
+print('Top 6 most frequent contribution dates:')
 head(dates_counts[order(-dates_counts$count),])
 
 ggplot(aes(x = date, y = count),
@@ -417,30 +417,30 @@ ggplot(aes(x = type, y = count),
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Consider_election_types_other_than_P2016_and_G2016}
 
 # I'm going to print head and tail of the o2016 data because there are 68 rows.
-print(paste('<B>Head and tail parts of datas whose election type is O2016</B>'))
+print('Head and tail parts of datas whose election type is O2016')
 o2016 = subset(Data, election_tp == 'O2016')
 head(o2016)
 tail(o2016)
 
-print(paste('<B>Are all O2016 contributions for Jill Stein?</B>'))
+print('Are all O2016 contributions for Jill Stein?')
 all(o2016$cand_nm == 'Stein, Jill')
 
-print(paste('<B>Since When and till when the contributions are received?</B>'))
+print('Since When and till when the contributions are received?')
 range(o2016$contb_receipt_dt)
 
-print(paste('<B>Datas whose election type is P2012</B>'))
+print('Datas whose election type is P2012')
 subset(Data, election_tp == 'P2012')
 
 # I'm going to print head and tail of the data whose election type is '' because there are more than 1500 rows.
-print(paste("<B>Head and tail parts of datas whose election type is ''</B>"))
+print("Head and tail parts of datas whose election type is ''")
 election_type_vacant <- subset(Data, election_tp == '')
 head(election_type_vacant)
 tail(election_type_vacant)
 
-print(paste('<B>For whom are the contributions?</B>'))
+print('For whom are the contributions?')
 unique(election_type_vacant$cand_nm)
 
-print(paste('<B>When the nominees received them?</B>'))
+print('When the nominees received them?')
 
 # I chose barplot to show the daily counts of type '' contributions.
 ggplot(aes(x = contb_receipt_dt), 
@@ -450,7 +450,7 @@ ggplot(aes(x = contb_receipt_dt),
   scale_x_date(date_breaks = '1 month') +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
-print(paste("<B>Since when and till when the candidates who aren't nominees received them?</B>"))
+print("Since when and till when the candidates who aren't nominees received them?")
 range(subset(election_type_vacant, if_nominee == F)$contb_receipt_dt)
 
 ggplot(aes(x = contb_receipt_dt), 
@@ -1106,10 +1106,10 @@ contbs_in_worst_collapsion_date <- new_Data %>%
   ungroup() %>%
   filter(sum_amounts == min(sum_amounts))
 
-print(paste('<B>When did the worst collapsion happened?</B>'))
+print('When did the worst collapsion happened?')
 unique(contbs_in_worst_collapsion_date$contb_receipt_dt)
 
-print(paste('<B>How many contributions were done at the date?</B>'))
+print('How many contributions were done at the date?')
 nrow(contbs_in_worst_collapsion_date)
 
 # I designated x as names of candidates, y as amounts and color as receipt_desc. I did it to know the distribution of the amounts at the date by each candidate and the reasons for them.
